# pyAMPP-0

./: .gitignore  .gitmodules  01_dl_build_box.ipynb  MANIFEST.in  README.md  ampp_compute.py  example.ipynb  lff.py  pyproject.toml  query_sunpy.py  requirements.txt  setup.py  test_01.ipynb
contrib/: MagFieldWrapper.py
src/pyampp0/: ampp_compute.py  query_sunpy.py  radio.py
src/pyampp0/contrib/: radio.py  visuals.py
src/pyampp0/gx_chromo/: combo_model.py  decompose.py  populate_chromo.py
