[build-system]
requires = ["setuptools>=65.4.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyampp0"
version = "0.0.1"
readme = "README.md"

dependencies = [
    'importlib-metadata; python_version>="3.10"',
    "numpy",
    "astropy",
    "sunpy==5.1.1",
    "drms==0.6.4",
    "matplotlib",
    "h5py",
    "scipy",
    "lxml",
    "zeep",
    "reproject",
    "pyAMaFiL"
]

description = "A script set for 3d magnetic field reconstruction using HMI magnetograms"

authors = [
  {name = "vit01 (Viktor)", email = "test@example.com"}
]
maintainers = [
  {name = "vit01 (Viktor)", email = "test@example.com"}
]

keywords = ["Sun", "magnetic fields", "LFF", "NLFFF", "solar physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Issues = "https://github.com/vit1-irk/pyAMPP-0/issues"
Repository = "https://github.com/vit1-irk/pyAMPP-0"